fix z-index

--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -10,6 +10,7 @@
   align-items: center;
   padding: 20px;
   transition: opacity 0.3s, visibility 0.3s;
+  z-index: 2;
   /* opacity: 0;
   visibility: hidden;
   pointer-events: none; */
